[ADD] Hash Password client-side; Better Comment; Remove UDP socket